@@ -12,8 +12,7 @@ GT_EventManager:AddEventListener("ADDON_READY", function()
                 GT_EventManager:PublishEvent("BANKCHAR_UPDATED_FROM_GUILD", historyEntry)
             end
         end,
-        {"ADD_BANKCHAR", "REMOVE_BANKCHAR"},
-        GT_OptionsService:GetOption("debug"))
+        {"ADD_BANKCHAR", "REMOVE_BANKCHAR"})
 
     bankContentSynchronizer = GT_SynchronizerFactory:CreateSynchronizer("GT_BankContent",
         function()
@@ -22,21 +21,8 @@ GT_EventManager:AddEventListener("ADDON_READY", function()
         function(historyEntry)
             if not IsInTable(GT_Data.bankContentHistory, historyEntry) then
                 table.insert(GT_Data.bankContentHistory, historyEntry)
-                --GT_EventManager:PublishEvent("REROLL_UPDATED_FROM_GUILD")
+                GT_EventManager:PublishEvent("BANKCONTENT_UPDATED_FROM_GUILD", historyEntry)
             end
         end,
-        {"ADD_BANKCONTENT", "REMOVE_BANKCONTENT"},
-        GT_OptionsService:GetOption("debug"))
-end)
-
-GT_EventManager:AddEventListener("OPTION_UPDATED", function(newOption)
-    if newOption.key == "debug" then
-        if bankCharSynchronizer ~= nil then
-            bankCharSynchronizer.debug = newOption.value
-        end
-
-        if bankContentSynchronizer ~= nil then
-            bankContentSynchronizer.debug = newOption.value
-        end
-    end
+        {"ADD_BANKCONTENT", "REMOVE_BANKCONTENT"})
 end)
